Sidenav opened true

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="main-container" autosize>
-  <mat-sidenav #sidenav class="sidenav" mode="side">
+  <mat-sidenav #sidenav class="sidenav" mode="side" opened="true">
     <p>Menu lateral</p>
   </mat-sidenav>
 
